--- a/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
+++ b/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
@@ -46,11 +46,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\CommonFunctions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\CommonFunctions.Designer.cs">
+      <DependentUpon>CommonFunctions.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\ConnectData.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\ConnectData.Designer.cs">
+      <DependentUpon>ConnectData.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\frmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\frmSignUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\frmSignUp.Designer.cs">
+      <DependentUpon>frmSignUp.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
