--- a/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
+++ b/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
@@ -70,11 +70,41 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="From\frmHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\frmHang.Designer.cs">
+      <DependentUpon>frmHang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\frmHDBan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\frmHDBan.Designer.cs">
+      <DependentUpon>frmHDBan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\frmHDNhap.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\frmHDNhap.Designer.cs">
+      <DependentUpon>frmHDNhap.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\frmKhachHang.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\frmKhachHang.Designer.cs">
+      <DependentUpon>frmKhachHang.cs</DependentUpon>
+    </Compile>
     <Compile Include="From\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="From\frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="From\frmNhanVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="From\frmNhanVien.Designer.cs">
+      <DependentUpon>frmNhanVien.cs</DependentUpon>
     </Compile>
     <Compile Include="From\frmSignUp.cs">
       <SubType>Form</SubType>
@@ -105,6 +135,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\Images\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
