--- a/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
+++ b/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\CommonFunctions.cs" />
-    <Compile Include="Classes\ConectData.cs" />
+    <Compile Include="Classes\ConnectData.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,64 +60,64 @@
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\frmHang.cs">
+    <Compile Include="Forms\frmHang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\frmHang.Designer.cs">
+    <Compile Include="Forms\frmHang.Designer.cs">
       <DependentUpon>frmHang.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\frmHDBan.cs">
+    <Compile Include="Forms\frmHDBan.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\frmHDBan.Designer.cs">
+    <Compile Include="Forms\frmHDBan.Designer.cs">
       <DependentUpon>frmHDBan.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\frmHDNhap.cs">
+    <Compile Include="Forms\frmHDNhap.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\frmHDNhap.Designer.cs">
+    <Compile Include="Forms\frmHDNhap.Designer.cs">
       <DependentUpon>frmHDNhap.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\frmKhachHang.cs">
+    <Compile Include="Forms\frmKhachHang.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\frmKhachHang.Designer.cs">
+    <Compile Include="Forms\frmKhachHang.Designer.cs">
       <DependentUpon>frmKhachHang.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\frmLogin.cs">
+    <Compile Include="Forms\frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\frmLogin.Designer.cs">
+    <Compile Include="Forms\frmLogin.Designer.cs">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\frmNhanVien.cs">
+    <Compile Include="Forms\frmNhanVien.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\frmNhanVien.Designer.cs">
+    <Compile Include="Forms\frmNhanVien.Designer.cs">
       <DependentUpon>frmNhanVien.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\frmSignUp.cs">
+    <Compile Include="Forms\frmSignUp.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\frmSignUp.Designer.cs">
+    <Compile Include="Forms\frmSignUp.Designer.cs">
       <DependentUpon>frmSignUp.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\HangSua.cs">
+    <Compile Include="Forms\HangSua.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\HangSua.Designer.cs">
+    <Compile Include="Forms\HangSua.Designer.cs">
       <DependentUpon>HangSua.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\HangThem.cs">
+    <Compile Include="Forms\HangThem.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\HangThem.Designer.cs">
+    <Compile Include="Forms\HangThem.Designer.cs">
       <DependentUpon>HangThem.cs</DependentUpon>
     </Compile>
-    <Compile Include="From\KHsua.cs">
+    <Compile Include="Forms\KHsua.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="From\KHsua.Designer.cs">
+    <Compile Include="Forms\KHsua.Designer.cs">
       <DependentUpon>KHsua.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
@@ -125,7 +125,7 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="From\frmHang.resx">
+    <EmbeddedResource Include="Forms\frmHang.resx">
       <DependentUpon>frmHang.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
