--- a/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
+++ b/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
@@ -42,6 +42,9 @@
     <Reference Include="Guna.UI2, Version=2.0.3.5, Culture=neutral, PublicKeyToken=4015e4865bda28a4, processorArchitecture=MSIL">
       <HintPath>..\packages\Guna.UI2.WinForms.2.0.3.5\lib\net40\Guna.UI2.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="Responsible.Core, Version=3.0.19.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Responsible.Core.3.0.19\lib\net45\Responsible.Core.dll</HintPath>
     </Reference>
