--- a/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
+++ b/Quan_Ly_Dien_Thoai/Quan_Ly_Dien_Thoai.csproj
@@ -81,6 +81,12 @@
     <Compile Include="Forms\ChiTietHDB.Designer.cs">
       <DependentUpon>ChiTietHDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\ChiTietHDN.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ChiTietHDN.Designer.cs">
+      <DependentUpon>ChiTietHDN.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\frmNhaCungCap.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ChiTietHDB.resx">
       <DependentUpon>ChiTietHDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ChiTietHDN.resx">
+      <DependentUpon>ChiTietHDN.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmHang.resx">
       <DependentUpon>frmHang.cs</DependentUpon>
